# DeepSeekR1Deployment

./: .env  .gitignore  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt  train_deepseek_R1.ipynb  train_deepseek_R1_code.ipynb
.dvc/: config
QwenGRPO/: __init__.py  dataset.py  features.py  plots.py
QwenGRPO/modeling/: predict.py  train.py
notebooks/: train_deepseek_R1.ipynb
